# serializer version: 1
# name: test_platform_setup_and_discovery[fan.arida_stavern-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.arida_stavern',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 48>,
    'translation_key': None,
    'unique_id': 'tuya.8u5ftxkt52smougesc',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.arida_stavern-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arida Stavern ',
      'supported_features': <FanEntityFeature: 48>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.arida_stavern',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.bree-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bree',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 56>,
    'translation_key': None,
    'unique_id': 'tuya.ppgdpsq1xaxlyzryjk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.bree-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bree',
      'preset_mode': 'normal',
      'preset_modes': list([
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 56>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bree',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[fan.ceiling_fan_light_v2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.ceiling_fan_light_v2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 53>,
    'translation_key': None,
    'unique_id': 'tuya.6wxksqu35c61sce9dsf',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.ceiling_fan_light_v2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'direction': 'forward',
      'friendly_name': 'ceiling fan/Light v2',
      'percentage': 20,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': list([
      ]),
      'supported_features': <FanEntityFeature: 53>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.ceiling_fan_light_v2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.ceiling_fan_with_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'normal',
        'sleep',
        'nature',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.ceiling_fan_with_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 61>,
    'translation_key': None,
    'unique_id': 'tuya.ijzjlqwmv1blwe0gsf',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.ceiling_fan_with_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'direction': 'reverse',
      'friendly_name': 'Ceiling Fan With Light',
      'percentage': None,
      'percentage_step': 16.666666666666668,
      'preset_mode': 'normal',
      'preset_modes': list([
        'normal',
        'sleep',
        'nature',
      ]),
      'supported_features': <FanEntityFeature: 61>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.ceiling_fan_with_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.dehumidifer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.dehumidifer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'tuya.ifzgvpgoodrfw2aksc',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.dehumidifer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dehumidifer',
      'preset_modes': list([
      ]),
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.dehumidifer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[fan.dehumidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.dehumidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 48>,
    'translation_key': None,
    'unique_id': 'tuya.2myxayqtud9aqbizsc',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.dehumidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dehumidifier',
      'supported_features': <FanEntityFeature: 48>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.hl400-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.hl400',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'tuya.zfHZQ7tZUBxAWjACjk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.hl400-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HL400',
      'percentage': None,
      'percentage_step': 33.333333333333336,
      'preset_mode': None,
      'preset_modes': list([
      ]),
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.hl400',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.ion1000pro-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.ion1000pro',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 48>,
    'translation_key': None,
    'unique_id': 'tuya.owozxdzgbibizu4sjk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.ion1000pro-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ION1000PRO',
      'supported_features': <FanEntityFeature: 48>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.ion1000pro',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[fan.kalado_air_purifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'manual',
        'auto',
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.kalado_air_purifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 56>,
    'translation_key': None,
    'unique_id': 'tuya.yo2karkjuhzztxsfjk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.kalado_air_purifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kalado Air Purifier',
      'preset_mode': 'auto',
      'preset_modes': list([
        'manual',
        'auto',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 56>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.kalado_air_purifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[fan.living_room_dehumidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.living_room_dehumidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'tuya.g1qorlffoy2iyo9bsc',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.living_room_dehumidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living room dehumidifier',
      'percentage': 100,
      'percentage_step': 50.0,
      'preset_mode': None,
      'preset_modes': list([
      ]),
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.living_room_dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[fan.tower_fan_ca_407g_smart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'ordinary',
        'nature',
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.tower_fan_ca_407g_smart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 59>,
    'translation_key': None,
    'unique_id': 'tuya.lflvu8cazha8af9jsk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[fan.tower_fan_ca_407g_smart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Tower Fan CA-407G Smart',
      'oscillating': True,
      'percentage': 37,
      'percentage_step': 1.0,
      'preset_mode': 'ordinary',
      'preset_modes': list([
        'ordinary',
        'nature',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 59>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.tower_fan_ca_407g_smart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
